# vulkan-rust

./: Cargo.toml  config.json
assets/: config.json
assets/models/: pengwing.glb
assets/shaders/: frag.frag  part-1.frag  part-1.vert  vert.vert
src/: gfx_helpers.rs  helpers.rs  main.rs  mesh.rs  shaders.rs  texture.rs
