[package]
name = "pasture-penguin"
version = "0.1.0"
authors = ["Tim Porritt <tim.m.porritt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
