[package]
name = "pasture-penguin"
version = "0.1.0"
authors = ["Tim Porritt <tim.m.porritt@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gfx-hal = "=0.6.0"
shaderc = "=0.6.2"
cgmath = "0.18.0"
gltf = "0.15.2"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "=0.6.3"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

# [replace]
# "gfx-backend-dx12:0.6.3" = {path = "C:/Users/Tim/.cargo/registry/src/github.com-1ecc6299db9ec823/gfx-backend-dx12-0.6.3"}
